[gd_scene load_steps=14 format=3 uid="uid://dc2o3w5pskn0x"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_kup3t"]
[ext_resource type="Texture2D" uid="uid://r1khpq5fnyt7" path="res://assets/Snowfall.png" id="2_85j5i"]
[ext_resource type="Texture2D" uid="uid://du3m588s3jryb" path="res://assets/BG.png" id="2_b5xsn"]
[ext_resource type="Texture2D" uid="uid://bkmuu5ah5pqml" path="res://assets/Sleigh.png" id="4_8wib4"]
[ext_resource type="AudioStream" uid="uid://kap0dsdl7cw5" path="res://assets/Sounds/cold-wind-sound-effect-127448.wav" id="5_0mbx0"]
[ext_resource type="FontFile" uid="uid://xnkktihrvv7a" path="res://assets/upheavtt.ttf" id="6_f0t3d"]
[ext_resource type="AudioStream" uid="uid://dsr8mfepgkon2" path="res://assets/Sounds/click.wav" id="7_ihdbq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c6e55"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(3.59, 0, 0)
emission_shape_scale = Vector3(1, 100, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
initial_velocity_max = 200.0
gravity = Vector3(0, 98, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmfkh"]
atlas = ExtResource("4_8wib4")
region = Rect2(0, 0, 40, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_6do4w"]
atlas = ExtResource("4_8wib4")
region = Rect2(40, 0, 40, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxfxw"]
atlas = ExtResource("4_8wib4")
region = Rect2(80, 0, 40, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2y03"]
atlas = ExtResource("4_8wib4")
region = Rect2(120, 0, 40, 140)

[sub_resource type="SpriteFrames" id="SpriteFrames_ihilv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmfkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6do4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxfxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2y03")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kup3t")

[node name="ParallaxBackground" type="Parallax2D" parent="."]
repeat_size = Vector2(0, 1150)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(574.204, 569.629)
scale = Vector2(5.75, 5.75)
texture = ExtResource("2_b5xsn")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 2
position = Vector2(213, -373)
rotation = 1.06983
scale = Vector2(5.75, 5.75)
amount = 500
process_material = SubResource("ParticleProcessMaterial_c6e55")
texture = ExtResource("2_85j5i")
lifetime = 2.0
preprocess = 215.7
speed_scale = 0.5
visibility_rect = Rect2(-100, -100, 400, 200)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(322, 335)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ihilv")
autoplay = "default"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -493.0
offset_right = 493.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_f0t3d")
theme_override_font_sizes/font_size = 124
text = "SLEIGH 'N' PRAY"
horizontal_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -50.5
offset_right = 37.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.48, 2.48)
pivot_offset = Vector2(37, 50)
alignment = 1

[node name="Start" type="Button" parent="MainMenu"]
modulate = Color(7.89344e-06, 0.870609, 0.442476, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_f0t3d")
text = "START"

[node name="Credits" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_f0t3d")
text = "Credits"

[node name="Quit" type="Button" parent="MainMenu"]
modulate = Color(0.863032, 0, 0.036811, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_f0t3d")
text = "Quit"

[node name="MenuSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0mbx0")
volume_db = 5.432
autoplay = true
bus = &"Music"

[node name="CreditsText" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 368.0
offset_top = 51.0
offset_right = 1536.0
offset_bottom = 732.0
scale = Vector2(0.61633, 0.587628)
theme_override_fonts/font = ExtResource("6_f0t3d")
theme_override_font_sizes/font_size = 36
text = "Programming:
theSalmonRoll


Art & Programming:
jem557



Music:
Carol of the Bells (Metal Version)
by Alexander Nakarada (www.creatorchords.com)
Licensed under Creative Commons
BY Attribution 4.0 License


Menu Sound Effect :
DARRYLL DAVID BELIRAN from Pixabay"
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 671.0
offset_top = 458.0
offset_right = 741.0
offset_bottom = 489.0
scale = Vector2(1.52254, 1.52254)
theme_override_fonts/font = ExtResource("6_f0t3d")
text = "Back"

[node name="MenuClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ihdbq")
volume_db = 4.657
bus = &"SFX"

[connection signal="pressed" from="MainMenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenu/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="MenuSound" to="." method="_on_menu_sound_finished"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
